--- a/APAK.html
+++ b/APAK.html
@@ -100,6 +100,7 @@ div#right {
     background-image: url(https://i.ytimg.com/vi/R7rAlAx377g/maxresdefault.jpg);
     background-size: 600px;
     font-size: 30px;
+	font-color:white;
     padding-top: 30px;
     font-weight: bold;
     box-sizing: border-box;
@@ -212,6 +213,7 @@ div#footer {
     margin-top:-300px;
     text-align: center;
     text-decoration: inherit;
+	font-color:white;
 }
 
 
