--- a/APAK.html
+++ b/APAK.html
@@ -344,19 +344,23 @@ Fire extinguishers are further divided into handheld and cart-mounted (also call
 <div id="under">
 
   <div id="kotak1"class="kotak">	
-      <div class="bulat1"></div> 
+      <div class="bulat1"></div>
+	  <img src="Class A.jpg">
       <div class="bulat2"></div>
   </div>
 
-  <div id="kotak2"class="kotak"> 
+  <div id="kotak2"class="kotak">
+	  <img src="Class B.jpg">
       <div class="bulat1"></div> 
       <div class="bulat2"></div>
   </div>
-  <div id="kotak3"class="kotak"> 
+  <div id="kotak3"class="kotak">
+	  <img src="Class C.jpg">
       <div class="bulat1"></div> 
       <div class="bulat2"></div>
   </div>
-  <div id="kotak4"class="kotak"> 
+  <div id="kotak4"class="kotak">
+	  <img src="Class  D.jpg">
       <div class="bulat1"></div> 
       <div class="bulat2"></div>
   </div>	
