--- a/APAK.html
+++ b/APAK.html
@@ -334,7 +334,7 @@ There are two main types of fire extinguishers: stored-pressure and cartridge-op
 Wheeled fire extinguisher and a sign inside a parking lot
 Fire extinguishers are further divided into handheld and cart-mounted (also called wheeled extinguishers). Handheld extinguishers weigh from 0.5 to 14 kilograms (1.1 to 30.9 lb), and are hence, easily portable by hand. Cart-mounted units typically weigh more than 23 kilograms (51 lb). These wheeled models are most commonly found at construction sites, airport runways, heliports, as well as docks and marinas.</p></div>
 
-<div id="video"><video width="450" height="350" autoplay>
+<div id="video"><video width="450" height="350" autoplay="loop">
   <source src="APAK.mp4" type="video/mp4">
   
     Your browser does not support the video tag.
