--- a/training/APAK.html
+++ b/training/APAK.html
@@ -117,7 +117,7 @@ div#right {
     margin-left: 57px;
     margin-top: 10px;
     border: 9px inset #fd0000;
-    background-image: url(https://i.ytimg.com/vi/R7rAlAx377g/maxresdefault.jpg);
+    background-image: url(houseonfire.jpg);
     background-size: 600px;
     font: 15px white;
     padding-top: 10px;
@@ -187,7 +187,7 @@ div #kotak3:hover {
 div #kotak4:hover {
     width: 100px;
     height: 100px;
-    -webkit-transform: rotate(180deg); /* Safari */
+    -webkit-transform: rotate(180deg); 
     transform: rotate(180deg);
 }
 
@@ -275,7 +275,7 @@ div#form {
 div#footer {
     width: 900px;
     height: 50px;
-    background-image: url(https://i.ytimg.com/vi/R7rAlAx377g/maxresdefault.jpg);
+    background-image: url(houseonfire.jpg);
     background-size: 916px;
     border: 10px inset #fd0000;
     margin-left: 149px;
