--- a/training/APAK.html
+++ b/training/APAK.html
@@ -48,9 +48,8 @@ img {
 }
 
 h2 {
-    color: white;
+    color:black;
     font-size: 47px;
-    text-shadow: 0 0 1px #fff, 0 0 1px #090909, 0 0 1px #fff, 0 0 1px #101010, 0 0 30px #0e0e0e, 0 0 40px #0c0c0c, 0 0 55px #0a0a0a, 0 0 75px #0e0e0e;
     vertical-align: top;
     margin-top: -101px;
     margin-left: 143px;
