--- a/training/APAK.html
+++ b/training/APAK.html
@@ -48,7 +48,8 @@ img {
 }
 
 h2 {
-    color:black;
+    color:white;
+    text-shadow: 5px 5px 5px 5px black;
     font-size: 47px;
     vertical-align: top;
     margin-top: -101px;
@@ -123,8 +124,8 @@ div#right {
     font-weight: bold;
     box-sizing: border-box;
     padding-left: 28px;
-    text-shadow: 2px 2px 5px red;
-    color: white;
+    
+    color: black;
 
   
     -webkit-column-count: 3; 
