--- a/training/APAK.html
+++ b/training/APAK.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSS Positioning part 2</title>
+	<title>CSS Positioning part 2 with animation and transition and video</title>
   <link href="https://fonts.googleapis.com/css?family=Khand" rel="stylesheet">
 	<style type="text/css"> 
 
@@ -119,13 +119,13 @@ div#right {
     border: 9px inset #fd0000;
     background-image: url(houseonfire.jpg);
     background-size: 600px;
-    font: 15px white;
+    font: 15px black;
     padding-top: 10px;
     font-weight: bold;
     box-sizing: border-box;
     padding-left: 28px;
     
-    color: black;
+    
 
   
     -webkit-column-count: 3; 
@@ -138,7 +138,6 @@ div#right {
 
 div #right p {
     font-size: 13px;
-    text-shadow: 1px 1px 1px #920d0d;
     padding: 10px 10px;
 }
 
@@ -282,7 +281,7 @@ div#footer {
     margin-top:60px;
     text-align: center;
     text-decoration: none;
-    color: white;
+    color:black;
 }
 
 div #footer p {
