--- a/training/APAK.html
+++ b/training/APAK.html
@@ -49,7 +49,7 @@ img {
 
 h2 {
     color:white;
-    text-shadow: 5px 5px 5px 5px black;
+    text-shadow: 5px black 5px black 5px black 5px black;
     font-size: 47px;
     vertical-align: top;
     margin-top: -101px;
