--- a/training/APAK.html
+++ b/training/APAK.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSS Positioning part 2</title>
+	<title>CSS Positioning part 2 with animation,transition and media</title>
   <link href="https://fonts.googleapis.com/css?family=Khand" rel="stylesheet">
 	<style type="text/css"> 
 
@@ -32,7 +32,7 @@ div#container {
     100% {background-color:#1f1f46; left:0px; top:0px;}
 }
 
-/* Standard syntax */
+
 @keyframes example {
     0%   {background-color:#1f1f46; left:0px; top:0px;}
     25%  {background-color:yellow; left:200px; top:0px;}
@@ -203,7 +203,7 @@ div #kotak3:hover {
     height: 100px;
 }
 
-#kotak4{-webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+#kotak4{-webkit-transition: width 2s, height 2s, -webkit-transform 2s; 
     transition: width 2s, height 2s, transform 2s;
 }
 
