--- a/abah/turtle.html
+++ b/abah/turtle.html
@@ -223,14 +223,14 @@ How Long Do Turtles Live
 
 			
 				<video width="960" height="720" controls id="funny">
-  				<source src="https://www.youtube.com/watch?v=p4Jj9QZFJvw" type="video/mp4">
+  				<source src="https://www.youtube.com/watch?v=p4Jj9QZFJvw.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 				</video>
 			
 
 			
 				<video width="960" height="720" controls id="cartoon">
-  				<source src="https://www.youtube.com/watch?v=bv2-BAAZ6Bc" type="video/mp4">
+  				<source src="https://www.youtube.com/watch?v=bv2-BAAZ6Bc.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 				</video>
 			</div>
