--- a/abah/turtle.html
+++ b/abah/turtle.html
@@ -223,7 +223,7 @@ How Long Do Turtles Live
 
 			
 				<video width="960" height="720" controls id="funny">
-  				<source src="https://www.youtube.com/watch?v=p4Jj9QZFJvw.mp4" type="video/mp4">
+  				<source src="penyu.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 				</video>
 			
