--- a/freezyfruitade/freezyfruitade.html
+++ b/freezyfruitade/freezyfruitade.html
@@ -37,30 +37,30 @@
   
       <div id="sm">
 
-      <a href="https://www.facebook.com/freezyfruitade/" data-layout="standard" data-size="small" data-show-faces="true" data-toggle="popover" title="Like Us On Facebook" data-content="freezyfruitade"><img src="images\nav\fbl.png"></a>
+      <a href="https://www.facebook.com/freezyfruitade/" data-layout="standard" data-size="small" data-show-faces="true" data-toggle="popover" title="Like Us On Facebook" data-content="freezyfruitade"><img src="fbl.png"></a>
 
-      <a href="skype:muzaini abdul shukor?call" data-toggle="popover" title="Let Us Skype" data-content="@muzainiabdulshu"><img src="images\nav\skypel.png">
+      <a href="skype:muzaini abdul shukor?call" data-toggle="popover" title="Let Us Skype" data-content="@muzainiabdulshu"><img src="skypel.png">
 
-      <a href="https://twitter.com/muzainiabdulshu" data-toggle="popover" title="Follow Us On Twitter" data-content="@muzainiabdulshu" class="twitter-follow-button" data-show-count="false"><img src="images\nav\tl1.png"></a>
+      <a href="https://twitter.com/muzainiabdulshu" data-toggle="popover" title="Follow Us On Twitter" data-content="@muzainiabdulshu" class="twitter-follow-button" data-show-count="false"><img src="tl1.png"></a>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-      <a href="weixin://dl/chat?{abahmoose7329}" data-toggle="popover" title="Send Message To Our WeChat" data-content="abahmoose7329"><img src="images\nav\wcl.png"></a>
+      <a href="weixin://dl/chat?{abahmoose7329}" data-toggle="popover" title="Send Message To Our WeChat" data-content="abahmoose7329"><img src="wcl.png"></a>
 
-      <a href="intent://send/60173573531#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" data-toggle="popover" title="Message Us On Whatsapp" data-content="60173573531"><img src="images\nav\whatsappl.png"></a>
+      <a href="intent://send/60173573531#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" data-toggle="popover" title="Message Us On Whatsapp" data-content="60173573531"><img src="whatsappl.png"></a>
 
       <img src="images\nav\yl1.png">
 
       <img src="images\nav\inl.png">
 
-      <a href="tel:60173573531" data-toggle="popover" title="call us" data-content="60173573531"><img src="images\nav\phone.png"></a>
+      <a href="tel:60173573531" data-toggle="popover" title="call us" data-content="60173573531"><img src="phone.png"></a>
 
-      <a href="mailto:muzainiabdulshukor@yahoo.com" data-toggle="popover" title="e-mail Us" data-content="muzainiabdulshukor@gmail.com"><img src="images\nav\email.png"></a>
+      <a href="mailto:muzainiabdulshukor@yahoo.com" data-toggle="popover" title="e-mail Us" data-content="muzainiabdulshukor@gmail.com"><img src="email.png"></a>
       </div>
     </div>
 
     <div class="row"></div>
     <div class="col-sm-12"><img src="peminat.jpg"> <img src="peminat2.jpg"><img src="peminat3.jpg"><img src="peminat4.jpg"></div>
-
+<section class="container-fluid"
   <div class="row">
     <div class="col-sm-4" >
       <h3><span style="color:black;font-size:45px;font-weight:bold;font-family: 'Allura', cursive;">Ice Cream</span></h3>
@@ -80,7 +80,8 @@ Your browser does not support the video tag.
       <h3><span style="color:black;font-size:45px;font-weight:bold;font-family: 'Allura', cursive;">Health And Beauty</span></h3>
       <img src="roti.jpg"><img src="roti2.jpg">
       <p><span style="color:black;font-size:25px;font-family: 'Allura', cursive;">Makanlan roti canai untuk kecantikan dalaman anda</span></p>
-    </div>
+	    </section>
+		 </div>
   </div>
 </div>
 
