--- a/freezyfruitade/freezyfruitade.html
+++ b/freezyfruitade/freezyfruitade.html
@@ -41,7 +41,7 @@
   
       <div id="sm">
 
-      <a href="https://www.facebook.com/freezyfruitade/" data-layout="standard" data-size="small" data-show-faces="true" data-toggle="popover" title="Like Us On Facebook" data-content="freezyfruitade"><img src="fbl.png"></a>
+      <a href="https://www.facebook.com/freezyfruitade/"data-toggle="popover" title="Like Us On Facebook" data-content="freezyfruitade"><img src="fbl.png"></a>
 
       <a href="skype:muzaini abdul shukor?call" data-toggle="popover" title="Let Us Skype" data-content="@muzainiabdulshu"><img src="skypel.png">
 
