--- a/freezyfruitade/freezyfruitade.html
+++ b/freezyfruitade/freezyfruitade.html
@@ -45,7 +45,7 @@
 
       <a href="skype:muzaini abdul shukor?call" data-toggle="popover" title="Let Us Skype" data-content="@muzainiabdulshu"><img src="skypel.png">
 
-      <a href="https://twitter.com/muzainiabdulshu" data-toggle="popover" title="Follow Us On Twitter" data-content="@muzainiabdulshu" class="twitter-follow-button" data-show-count="false"><img src="tl1.png"></a>
+      <a href="https://twitter.com/muzainiabdulshu" data-toggle="popover" title="Follow Us On Twitter" data-content="@muzainiabdulshu"><img src="tl1.png"></a>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
       <a href="weixin://dl/chat?{abahmoose7329}" data-toggle="popover" title="Send Message To Our WeChat" data-content="abahmoose7329"><img src="wcl.png"></a>
